Update section subtitles in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="projects" id="projects">
         <div class="container">
             <h2 class="section-title">Research & Projects</h2>
-            <p class="section-subtitle">My work in Computer Vision, Self-Supervised Learning, and Video Understanding</p>
+            <p class="section-subtitle">All my projects and work. Research projects tagged with "Research"</p>
             
             <div class="project-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
@@ -103,7 +103,7 @@
     <section class="research" id="research">
         <div class="container">
             <h2 class="section-title">Research & Experience</h2>
-            <p class="section-subtitle">My journey in AI research and academic pursuits</p>
+            <p class="section-subtitle">My journey with research and academic pursuits</p>
 
             <div class="research-content">
                 <div class="research-section">
